@@ -1,1 +1,1 @@
-1.8.11.0-rc3
+1.8.11.0
